# Unsaid-Talks-Final-Projects

Agno/agno_finance_agent/agno_finance_agent_ai/: financial_agent.py  main.py  pyproject.toml  requirements.txt
n8n/LinkedIn Post Generator/: LinkedIn_Post_Generator_Documentation.docx  The LinkedIn Post Generator.json
n8n/Student Roadmap Generator/: Student Roadmap Generator.json  Student_Roadmap_Documentation.docx
